--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import Navigation from '../components/Navigation/Navigation';
+import Footer from '../components/Footer/Footer';
 export interface Props {
 	title: string;
 }
@@ -7,30 +9,105 @@ const { title } = Astro.props;
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description">
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
+		<meta charset='UTF-8' />
+		<meta
+			name='description'
+			content='Astro description'
+		/>
+		<meta
+			name='viewport'
+			content='width=device-width'
+		/>
+		<link
+			rel='icon'
+			type='image/svg+xml'
+			href='/favicon.svg'
+		/>
+		<meta
+			name='generator'
+			content={Astro.generator}
+		/>
 		<title>{title}</title>
 	</head>
 	<body>
+		<Navigation />
 		<slot />
+		<Footer />
 	</body>
 </html>
 <style is:global>
 	:root {
-		--accent: 124, 58, 237;
-		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
+		--color-primary: '#272727';
+		--color-secondary: '#4F98CA';
+		--color-accent: '#50D890';
+		--color-light: '#EFFFFB';
 	}
 	html {
 		font-family: system-ui, sans-serif;
-		background-color: #F6F6F6;
+		background-color: var(--color-primary);
 	}
-	code {
-		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-			Bitstream Vera Sans Mono, Courier New, monospace;
+	body {
+		width: 100%;
+		height: fit-content;
+		min-height: 100vh;
+		overflow-x: hidden;
+	}
+	nav,
+	footer {
+		width: 100%;
+		height: fit-content;
+	}
+	main {
+		width: 100%;
+		max-width: 1280px;
+		height: fit-content;
+		margin: auto;
+	}
+	section {
+		width: 100%;
+		height: fit-content;
+		padding: 5% 2.5%;
+	}
+
+	p {
+		margin-bottom: 1rem;
+	}
+
+	h1,
+	h2,
+	h3,
+	h4,
+	h5 {
+		margin: 2rem 0 1.5rem !important;
+		font-weight: 400 !important;
+		line-height: 1.3 !important;
+	}
+
+	h1 {
+		margin-top: 0;
+		font-size: 2.488rem !important;
+	}
+
+	h2 {
+		font-size: 2.074rem !important;
+	}
+
+	h3 {
+		font-size: 1.728rem !important;
+	}
+
+	h4 {
+		font-size: 1.44rem !important;
+	}
+
+	h5 {
+		font-size: 1.2rem !important;
+	}
+
+	small,
+	.text_small {
+		font-size: 0.833rem !important;
 	}
 </style>
