--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,6 +29,19 @@ const { title } = Astro.props;
 			name='generator'
 			content={Astro.generator}
 		/>
+		<link
+			rel='preconnect'
+			href='https://fonts.googleapis.com'
+		/>
+		<link
+			rel='preconnect'
+			href='https://fonts.gstatic.com'
+			crossorigin
+		/>
+		<link
+			href='https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'
+			rel='stylesheet'
+		/>
 		<title>{title}</title>
 	</head>
 	<body>
@@ -40,19 +53,37 @@ const { title } = Astro.props;
 <style is:global>
 	:root {
 		--color-primary: '#272727';
+		--color-primary-light: '#303030';
 		--color-secondary: '#4F98CA';
 		--color-accent: '#50D890';
 		--color-light: '#EFFFFB';
 	}
+	*::-webkit-scrollbar,
+	*::-webkit-scrollbar-track,
+	*::-webkit-scrollbar-thumb {
+		width: 5px;
+		height: 5px;
+	}
+	*::-webkit-scrollbar-track {
+		background-color: #303030;
+	}
+	*::-webkit-scrollbar-thumb {
+		background-color: #50d890;
+	}
 	html {
-		font-family: system-ui, sans-serif;
-		background-color: var(--color-primary);
+		font-family: monospace, 'Poppins', sans-serif !important;
+		font-weight: 400;
+		line-height: 1.75;
+		color: #effffb !important;
 	}
 	body {
 		width: 100%;
 		height: fit-content;
 		min-height: 100vh;
 		overflow-x: hidden;
+		background-color: #272727 !important;
+		position: relative;
+		z-index: 0;
 	}
 	nav,
 	footer {
@@ -61,7 +92,7 @@ const { title } = Astro.props;
 	}
 	main {
 		width: 100%;
-		max-width: 1280px;
+
 		height: fit-content;
 		margin: auto;
 	}
@@ -69,6 +100,10 @@ const { title } = Astro.props;
 		width: 100%;
 		height: fit-content;
 		padding: 5% 2.5%;
+	}
+	section > div {
+		max-width: 1280px;
+		margin: auto;
 	}
 
 	p {
@@ -80,7 +115,7 @@ const { title } = Astro.props;
 	h3,
 	h4,
 	h5 {
-		margin: 2rem 0 1.5rem !important;
+		margin: 1rem 0 1rem !important;
 		font-weight: 400 !important;
 		line-height: 1.3 !important;
 	}
@@ -91,8 +126,29 @@ const { title } = Astro.props;
 	}
 
 	h2 {
+		position: relative;
 		font-size: 2.074rem !important;
+		text-align: start;
 	}
+
+	/* h2::before {
+		position: absolute;
+		top: 0;
+		left: 0;
+		content: '';
+		width: 50px;
+		height: 3px;
+		background-color: #50d890;
+	}
+	h2::after {
+		position: absolute;
+		bottom: 0;
+		right: 0;
+		content: '';
+		width: 40px;
+		height: 3px;
+		background-color: #50d890;
+	} */
 
 	h3 {
 		font-size: 1.728rem !important;
