--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,7 @@
 import Navigation from '../components/Navigation/Navigation';
 import Footer from '../components/Footer/Footer';
 export interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
@@ -10,128 +10,137 @@ const { title } = Astro.props;
 
 <!DOCTYPE html>
 <html lang='en'>
-	<head>
-		<meta charset='UTF-8' />
-		<meta
-			name='description'
-			content='Astro description'
-		/>
-		<meta
-			name='viewport'
-			content='width=device-width'
-		/>
-		<link
-			rel='icon'
-			type='image/svg+xml'
-			href='/favicon.svg'
-		/>
-		<meta
-			name='generator'
-			content={Astro.generator}
-		/>
-		<link
-			rel='preconnect'
-			href='https://fonts.googleapis.com'
-		/>
-		<link
-			rel='preconnect'
-			href='https://fonts.gstatic.com'
-			crossorigin
-		/>
-		<link
-			href='https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'
-			rel='stylesheet'
-		/>
-		<title>{title}</title>
-	</head>
-	<body>
-		<Navigation />
-		<slot />
-		<Footer />
-	</body>
+  <head>
+    <meta charset='UTF-8' />
+    <meta
+      name='description'
+      content='Astro description'
+    />
+    <meta
+      name='viewport'
+      content='width=device-width'
+    />
+    <link
+      rel='icon'
+      type='image/svg+xml'
+      href='/favicon.svg'
+    />
+    <meta
+      name='generator'
+      content={Astro.generator}
+    />
+    <link
+      rel='preconnect'
+      href='https://fonts.googleapis.com'
+    />
+    <link
+      rel='preconnect'
+      href='https://fonts.gstatic.com'
+      crossorigin
+    />
+    <link
+      href='https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'
+      rel='stylesheet'
+    />
+    <title>{title}</title>
+  </head>
+  <body>
+    <Navigation />
+    <slot />
+    <Footer />
+  </body>
 </html>
 <style is:global>
-	:root {
-		--color-primary: '#272727';
-		--color-primary-light: '#303030';
-		--color-secondary: '#4F98CA';
-		--color-accent: '#50D890';
-		--color-light: '#EFFFFB';
-	}
-	*::-webkit-scrollbar,
-	*::-webkit-scrollbar-track,
-	*::-webkit-scrollbar-thumb {
-		width: 5px;
-		height: 5px;
-	}
-	*::-webkit-scrollbar-track {
-		background-color: #303030;
-	}
-	*::-webkit-scrollbar-thumb {
-		background-color: #50d890;
-	}
-	html {
-		font-family: monospace, 'Poppins', sans-serif !important;
-		font-weight: 400;
-		line-height: 1.75;
-		color: #effffb !important;
-	}
-	body {
-		width: 100%;
-		height: fit-content;
-		min-height: 100vh;
-		overflow-x: hidden;
-		background-color: #272727 !important;
-		position: relative;
-		z-index: 0;
-	}
-	nav,
-	footer {
-		width: 100%;
-		height: fit-content;
-	}
-	main {
-		width: 100%;
+  :root {
+    --color-primary: '#272727';
+    --color-primary-light: '#303030';
+    --color-secondary: '#4F98CA';
+    --color-accent: '#50D890';
+    --color-light: '#EFFFFB';
+  }
+  *::-webkit-scrollbar,
+  *::-webkit-scrollbar-track,
+  *::-webkit-scrollbar-thumb {
+    width: 5px;
+    height: 5px;
+  }
+  *::-webkit-scrollbar-track {
+    background-color: #303030;
+  }
+  *::-webkit-scrollbar-thumb {
+    background-color: #50d890;
+  }
+  html {
+    font-family: monospace, 'Poppins', sans-serif !important;
+    font-weight: 400;
+    line-height: 1.75;
+    color: #effffb !important;
+  }
+  body {
+    width: 100%;
+    height: fit-content;
+    min-height: 100vh;
+    overflow-x: hidden;
+    background-color: #272727 !important;
+    position: relative;
+    z-index: 0;
+  }
+  nav,
+  footer {
+    width: 100%;
+    height: fit-content;
+  }
+  footer > div {
+    width: 100%;
+    max-width: 1280px;
+    height: fit-content;
+    margin: auto;
+    padding: 5% 2.5%;
+  }
+  main {
+    width: 100%;
 
-		height: fit-content;
-		margin: auto;
-	}
-	section {
-		width: 100%;
-		height: fit-content;
-		padding: 5% 2.5%;
-	}
-	section > div {
-		max-width: 1280px;
-		margin: auto;
-	}
+    height: fit-content;
+    margin: auto;
+  }
+  section {
+    width: 100%;
+    height: fit-content;
+    padding: 5% 2.5%;
+    scroll-snap-type: mandatory;
+    scroll-snap-align: start;
+  }
+  section > div {
+    max-width: 1280px;
+    margin: auto;
+  }
 
-	p {
-		margin-bottom: 1rem;
-	}
+  p {
+    margin-bottom: 1rem;
+  }
 
-	h1,
-	h2,
-	h3,
-	h4,
-	h5 {
-		margin: 1rem 0 1rem !important;
-		font-weight: 400 !important;
-		line-height: 1.3 !important;
-	}
+  h1,
+  h2,
+  h3,
+  h4,
+  h5 {
+    margin: 1rem 0 1rem !important;
+    font-weight: 400 !important;
+    line-height: 1.3 !important;
+  }
 
-	h1 {
-		margin-top: 0;
-		font-size: 2.488rem !important;
-	}
+  h1 {
+    margin-top: 0;
+    font-size: 2.488rem !important;
+  }
 
-	h2 {
-		position: relative;
-		font-size: 2.074rem !important;
-		text-align: start;
-	}
+  h2 {
+    position: relative;
+    font-size: 2.074rem !important;
+    text-align: start;
+  }
 
-	/* h2::before {
+  /* h2::before {
 		position: absolute;
 		top: 0;
 		left: 0;
@@ -150,20 +159,20 @@ const { title } = Astro.props;
 		background-color: #50d890;
 	} */
 
-	h3 {
-		font-size: 1.728rem !important;
-	}
+  h3 {
+    font-size: 1.728rem !important;
+  }
 
-	h4 {
-		font-size: 1.44rem !important;
-	}
+  h4 {
+    font-size: 1.44rem !important;
+  }
 
-	h5 {
-		font-size: 1.2rem !important;
-	}
+  h5 {
+    font-size: 1.2rem !important;
+  }
 
-	small,
-	.text_small {
-		font-size: 0.833rem !important;
-	}
+  small,
+  .text_small {
+    font-size: 0.833rem !important;
+  }
 </style>
