--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -52,11 +52,11 @@ const { title } = Astro.props;
 </html>
 <style is:global>
   :root {
-    --color-primary: '#272727';
-    --color-primary-light: '#303030';
-    --color-secondary: '#4F98CA';
-    --color-accent: '#50D890';
-    --color-light: '#EFFFFB';
+    --color-primary: #272727;
+    --color-primary-light: #303030;
+    --color-secondary: #4f98ca;
+    --color-accent: #50d890;
+    --color-light: #effffb;
   }
   *::-webkit-scrollbar,
   *::-webkit-scrollbar-track,
