imported re-located components

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
-import HeroSection from '../components/HeroSection/HeroSection';
-import AboutSection from '../components/AboutSection/AboutSection';
-import RecentProjecsSection from '../components/RecentProjectsSection/RecentProjectsSection';
-import SkillsSection from '../components/SkillsSection/SkillsSection';
-import EducationSection from '../components/EducationSection/EducationSection';
-import ContactMeSection from '../components/ContactMeSection/ContactMeSection';
-import RecentBlogPostsSection from '../components/RecentBlogPostsSection/RecentBlogPostsSection';
+import HeroSection from '../components/Home/HeroSection/HeroSection';
+import AboutSection from '../components/Home/AboutSection/AboutSection';
+import RecentProjecsSection from '../components/Home/RecentProjectsSection/RecentProjectsSection';
+import SkillsSection from '../components/Home/SkillsSection/SkillsSection';
+import EducationSection from '../components/Home/EducationSection/EducationSection';
+import ContactMeSection from '../components/Home/ContactMeSection/ContactMeSection';
+import RecentBlogPostsSection from '../components/Home/RecentBlogPostsSection/RecentBlogPostsSection';
 import Layout from '../layouts/Layout.astro';
 ---
 
@@ -19,4 +19,4 @@ import Layout from '../layouts/Layout.astro';
     <ContactMeSection client:visible={true} />
     <RecentBlogPostsSection />
   </main>
-</Layout>
+</Layout>../components/Home/RecentBlogPostsSection/RecentBlogPostsSection
