created functionaliy of service page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,4 +19,4 @@ import Layout from '../layouts/Layout.astro';
     <ContactMeSection client:visible={true} />
     <RecentBlogPostsSection />
   </main>
-</Layout>../components/Home/RecentBlogPostsSection/RecentBlogPostsSection
+</Layout>
