created layout for service page

--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from '../../layouts/Layout.astro';
+import ServicesLayout from '../../layouts/Services_Layout.astro';
 import ServicesComponent from '../../components/Services/ServicesComponent/ServicesComponent';
 ---
 
-<Layout title={'Lahiru A. Rajakaruna | Services'}>
+<ServicesLayout title={'Lahiru A. Rajakaruna | Services'}>
   <ServicesComponent client:only={true} />
-</Layout>
+</ServicesLayout>
