added bg and made the table a flex

--- a/src/components/Services/ServiceCard/style.module.css
+++ b/src/components/Services/ServiceCard/style.module.css
@@ -12,6 +12,12 @@
 
     animation: zoom_in 500ms ease-out 0ms 1 normal forwards;
     -webkit-animation: zoom_in 500ms ease-out 0ms 1 normal forwards;
+
+    background-image: url('/service_card_bg.svg');
+    background-size: 80%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-blend-mode: difference;
 }
 
 @keyframes zoom_in {
