updated services page for all devices

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -54,9 +54,8 @@ const { title } = Astro.props;
   :root {
     --color-primary: #272727;
     --color-primary-light: #303030;
-    --color-secondary: #4f98ca;
     --color-accent: #50d890;
-    --color-light: #effffb;
+    --color-secondary: #effffb;
   }
   *::-webkit-scrollbar,
   *::-webkit-scrollbar-track,
