--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,6 +11,10 @@ const { title } = Astro.props;
 <!DOCTYPE html>
 <html lang='en'>
   <head>
+    <link
+      rel='sitemap'
+      href='/sitemap-index.xml'
+    />
     <meta charset='UTF-8' />
     <meta
       name='description'
