--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,8 +10,10 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title='Lahiru A. Rajakaruna|Web Developer'>
-  <main>
+  <header>
     <HeroSection />
+  </header>
+  <main>
     <AboutSection />
     <RecentProjecsSection />
     <SkillsSection />
