--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,4 +1,5 @@
 ---
+export const prerender = false;
 import BlogSearchPanel from '../../components/Blog/BlogSearchPanel/BlogSearchPanel';
 import Layout from '../../layouts/Layout.astro';
 ---
