--- a/src/pages/blog/[post_id].astro
+++ b/src/pages/blog/[post_id].astro
@@ -1,8 +1,13 @@
 ---
+import type { GetStaticPaths } from 'astro';
 import Layout from '../../layouts/Layout.astro';
 import BlogPostLayout from '../../components/Blog/BlogPostLayout/BlogPostLayout';
 
 const params = Astro.params;
+
+export function getStaticPaths() {
+  return [];
+}
 
 const POST_ENTRY = undefined;
 const POST_TITLE = 'VIEW';
